--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -25,8 +25,8 @@ services:
     # environment:
     #   - XINFERENCE_MODEL_SRC=modelscope
   chatchat:
-    image: chatimage/chatchat:0.3.1.1-2024-0714
-    # image: ccr.ccs.tencentyun.com/chatchat/chatchat:0.3.1.1-2024-0714
+    image: chatimage/chatchat:0.3.1.2
+    # image: ccr.ccs.tencentyun.com/chatchat/chatchat:0.3.1.2
     restart: always
     # ports: # 不使用 host network 时可打开.
     #   - "7861:7861"
