--- a/.github/workflows/docker-build.yaml
+++ b/.github/workflows/docker-build.yaml
@@ -28,58 +28,58 @@ jobs:
   docker-build:
     runs-on: ubuntu-latest
     steps:
-      - name: Optimize Disk Space
-        uses: hugoalh/disk-space-optimizer-ghaction@v0.8.0
-        with:
-          operate_sudo: "True"
-          general_include: ".+"
-          general_exclude: |-
-            ^GCC$
-            ^G\+\+$
-            Clang
-            LLVM
-          docker_include: ".+"
-          docker_prune: "True"
-          docker_clean: "True"
-          apt_prune: "True"
-          apt_clean: "True"
-          homebrew_prune: "True"
-          homebrew_clean: "True"
-          npm_prune: "True"
-          npm_clean: "True"
-          os_swap: "True"
-      - name: Remove Unnecessary Tools And Files
-        env:
-          DEBIAN_FRONTEND: noninteractive
-        run: |
-          sudo apt-get remove -y '^dotnet-.*' '^llvm-.*' 'php.*' azure-cli google-chrome-stable firefox powershell mono-devel
-          sudo apt-get autoremove --purge -y
-          sudo find /var/log -name "*.gz" -type f -delete
-          sudo rm -rf /var/cache/apt/archives
-          sudo rm -rf /tmp/*
-          sudo rm -rf /etc/apt/sources.list.d/* /usr/share/dotnet /usr/local/lib/android /opt/ghc /etc/mysql /etc/php
-          sudo -E apt-get -y purge azure-cli* docker* ghc* zulu* hhvm* llvm* firefox* google* dotnet* aspnetcore* powershell* openjdk* adoptopenjdk* mysql* php* mongodb* moby* snap* || true
-          sudo rm -rf /etc/apt/sources.list.d/* /usr/local/lib/android /opt/ghc /usr/share/dotnet /usr/local/graalvm /usr/local/.ghcup \
-          /usr/local/share/powershell /usr/local/share/chromium /usr/local/lib/node_modules
-          sudo rm -rf /etc/apt/sources.list.d/* /usr/share/dotnet /usr/local/lib/android /opt/ghc /etc/mysql /etc/php
-          sudo -E apt-get -y purge azure-cli* docker* ghc* zulu* hhvm* llvm* firefox* google* dotnet* aspnetcore* powershell* openjdk* adoptopenjdk* mysql* php* mongodb* moby* snap* || true
-          sudo -E apt-get -qq update
-          sudo -E apt-get -qq install libfuse-dev $(curl -fsSL git.io/depends-ubuntu-2204)
-          sudo -E apt-get -qq autoremove --purge
-          sudo -E apt-get -qq clean
-          sudo apt-get clean
-          rm -rf /opt/hostedtoolcache
-          sudo timedatectl set-timezone "$TZ"
-      - name: Free Up Disk Space
-        uses: easimon/maximize-build-space@master
-        with:
-          root-reserve-mb: 20480 # 给 / 预留 20GiB 空间( docker 预留)
-          swap-size-mb: 1
-          remove-dotnet: 'true'
-          remove-android: 'true'
-          remove-haskell: 'true'
-          remove-codeql: 'true'
-          remove-docker-images: 'true'
+#      - name: Optimize Disk Space
+#        uses: hugoalh/disk-space-optimizer-ghaction@v0.8.0
+#        with:
+#          operate_sudo: "True"
+#          general_include: ".+"
+#          general_exclude: |-
+#            ^GCC$
+#            ^G\+\+$
+#            Clang
+#            LLVM
+#          docker_include: ".+"
+#          docker_prune: "True"
+#          docker_clean: "True"
+#          apt_prune: "True"
+#          apt_clean: "True"
+#          homebrew_prune: "True"
+#          homebrew_clean: "True"
+#          npm_prune: "True"
+#          npm_clean: "True"
+#          os_swap: "True"
+#      - name: Remove Unnecessary Tools And Files
+#        env:
+#          DEBIAN_FRONTEND: noninteractive
+#        run: |
+#          sudo apt-get remove -y '^dotnet-.*' '^llvm-.*' 'php.*' azure-cli google-chrome-stable firefox powershell mono-devel
+#          sudo apt-get autoremove --purge -y
+#          sudo find /var/log -name "*.gz" -type f -delete
+#          sudo rm -rf /var/cache/apt/archives
+#          sudo rm -rf /tmp/*
+#          sudo rm -rf /etc/apt/sources.list.d/* /usr/share/dotnet /usr/local/lib/android /opt/ghc /etc/mysql /etc/php
+#          sudo -E apt-get -y purge azure-cli* docker* ghc* zulu* hhvm* llvm* firefox* google* dotnet* aspnetcore* powershell* openjdk* adoptopenjdk* mysql* php* mongodb* moby* snap* || true
+#          sudo rm -rf /etc/apt/sources.list.d/* /usr/local/lib/android /opt/ghc /usr/share/dotnet /usr/local/graalvm /usr/local/.ghcup \
+#          /usr/local/share/powershell /usr/local/share/chromium /usr/local/lib/node_modules
+#          sudo rm -rf /etc/apt/sources.list.d/* /usr/share/dotnet /usr/local/lib/android /opt/ghc /etc/mysql /etc/php
+#          sudo -E apt-get -y purge azure-cli* docker* ghc* zulu* hhvm* llvm* firefox* google* dotnet* aspnetcore* powershell* openjdk* adoptopenjdk* mysql* php* mongodb* moby* snap* || true
+#          sudo -E apt-get -qq update
+#          sudo -E apt-get -qq install libfuse-dev $(curl -fsSL git.io/depends-ubuntu-2204)
+#          sudo -E apt-get -qq autoremove --purge
+#          sudo -E apt-get -qq clean
+#          sudo apt-get clean
+#          rm -rf /opt/hostedtoolcache
+#          sudo timedatectl set-timezone "$TZ"
+#      - name: Free Up Disk Space
+#        uses: easimon/maximize-build-space@master
+#        with:
+#          root-reserve-mb: 20480 # 给 / 预留 20GiB 空间( docker 预留)
+#          swap-size-mb: 1
+#          remove-dotnet: 'true'
+#          remove-android: 'true'
+#          remove-haskell: 'true'
+#          remove-codeql: 'true'
+#          remove-docker-images: 'true'
       - name: Checkout Repository
         uses: actions/checkout@v4
       - name: Set DockerImage Tag
@@ -121,9 +121,8 @@ jobs:
           push: true
           tags: |
             chatimage/chatchat:${{ env.image_tag }}
-            ccr.ccs.tencentyun.com/langchain-chatchat/chatchat:${{ env.image_tag }}
           platforms: |
-            linux/amd64, linux/arm64
+            linux/amd64
       - name: Logout from Docker Hub
         run: docker logout
       - name: Logout from Tencent Cloud Container Registry
