--- a/.github/workflows/docker-build.yaml
+++ b/.github/workflows/docker-build.yaml
@@ -143,3 +143,6 @@ jobs:
           # 使用 hub 命令行工具创建 PR
           export GITHUB_TOKEN=${{ secrets.GITHUB_TOKEN }}
           hub pull-request -b master -h update-docker-image-${{ env.image_tag }} -m "Update Docker image to ${{ env.image_tag }}" -l docker,automated-pr
+      - name: test
+        run: |
+          echo "test"
