environment: Scheduled GITHUB_OWNER publish (#4866)
Co-authored-by: glide-the <2533736852@qq.com>

--- a/.github/workflows/label_ad_issue.yml
+++ b/.github/workflows/label_ad_issue.yml
@@ -6,12 +6,13 @@ on:
       - opened
 
 jobs:
-  label_issue:
+  label_ad_issue:
     runs-on: ubuntu-latest
 
+    environment: Scheduled GITHUB_OWNER publish
     steps:
       - env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GH_TOKEN: ${{ secrets.GITHUB_OWNER_TOKEN }}
           ISSUE_URL: ${{ github.event.issue.html_url }}
           ISSUE_TITLE: ${{ github.event.issue.title }}
         run: |
