--- a/libs/chatchat-server/pyproject.toml
+++ b/libs/chatchat-server/pyproject.toml
@@ -31,7 +31,7 @@ jieba = "0.42.1"
 rank_bm25 = "0.2.2"
 openpyxl = "3.1.4"
 networkx = "3.1"
-opencv-python = "4.10.0.84"
+opencv-python = "~4.10.0.84"
 PyMuPDF = "~1.23.16"
 rapidocr_onnxruntime = "~1.3.8"
 requests = "~2.31.0"
@@ -44,7 +44,7 @@ markdownify = ">=0.11.6"
 tqdm = ">=4.66.1"
 websockets = ">=12.0"
 numpy = "~1.24.4"
-pandas = "~1" # test
+pandas = "~1.3.0" # test
 pydantic = "~2.7.4"
 httpx = {version = ">=0.25.2", extras = ["brotli", "http2", "socks"]}
 python-multipart = "0.0.9"
@@ -56,6 +56,7 @@ streamlit-chatbox = "1.1.12.post4"
 streamlit-modal = "0.1.0"
 streamlit-aggrid = "1.0.5"
 streamlit-extras = "0.4.2"
+htbuilder = "0.6.2"
 xinference_client = { version = "^0.13.0", optional = true }
 zhipuai = { version = "^2.1.0", optional = true }
 pymysql = "^1.1.0"
@@ -250,7 +251,7 @@ dotenv = "dotenv:plugin"
 
 
 # https://python-poetry.org/docs/repositories/
-#[[tool.poetry.source]]
-#name = "tsinghua"
-#url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
-#priority = "primary"
+[[tool.poetry.source]]
+name = "tsinghua"
+url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
+priority = "primary"
