--- a/libs/chatchat-server/pyproject.toml
+++ b/libs/chatchat-server/pyproject.toml
@@ -48,6 +48,7 @@ pandas = "~1.3.0" # test
 pydantic = "~2.7.4"
 httpx = {version = "0.27.2", extras = ["brotli", "http2", "socks"]}
 python-multipart = "0.0.9"
+json_repair = ">=0.30.0"
 # webui
 streamlit = "1.34.0"
 streamlit-option-menu = "0.3.12"
