--- a/libs/chatchat-server/pyproject.toml
+++ b/libs/chatchat-server/pyproject.toml
@@ -13,12 +13,13 @@ packages = [
 chatchat = 'chatchat.cli:main'
 
 [tool.poetry.dependencies]
-python = ">=3.8.1,<3.12,!=3.9.7"
+python = ">=3.10,<3.12,!=3.9.7"
 langchain = { version = "0.1.17", python = ">=3.8.1,<3.12,!=3.9.7" }
 langchainhub = "0.1.14"
 langchain-community = "0.0.36"
 langchain-openai = { version = "0.0.6", python = ">=3.8.1,<3.12,!=3.9.7" }
 langchain-experimental = "0.0.58"
+mcp = ">=1.4.1,<1.5"
 fastapi = "~0.109.2"
 sse_starlette = "~1.8.2"
 nltk = "~3.8.1"
@@ -62,7 +63,7 @@ xinference_client = { version = "^0.13.0", optional = true }
 zhipuai = { version = "^2.1.0", optional = true }
 pymysql = "^1.1.0"
 memoization = "0.4.0"
-pydantic_settings = "2.3.4"
+pydantic_settings = ">=2.3.4"
 ruamel_yaml = "0.18.6"
 loguru = "^0.7.2"
 streamlit-paste-button = "0.1.2"
