--- a/libs/chatchat-server/pyproject.toml
+++ b/libs/chatchat-server/pyproject.toml
@@ -19,6 +19,7 @@ langchainhub = "0.1.14"
 langchain-community = "0.0.36"
 langchain-openai = { version = "0.0.6", python = ">=3.8.1,<3.12,!=3.9.7" }
 langchain-experimental = "0.0.58"
+humanlayer= "0.7.6"
 mcp = ">=1.4.1,<1.5"
 fastapi = "~0.109.2"
 sse_starlette = "~1.8.2"
@@ -35,7 +36,7 @@ networkx = "3.1"
 opencv-python = "~4.10.0.84"
 PyMuPDF = "~1.23.16"
 rapidocr_onnxruntime = "~1.3.8"
-requests = "~2.31.0"
+requests = "~2.32.3"
 pathlib = "~1.0.1"
 pyjwt = "~2.8.0"
 elasticsearch = "*"
@@ -46,7 +47,7 @@ tqdm = ">=4.66.1"
 websockets = ">=12.0"
 numpy = "~1.24.4"
 pandas = "~1.3.0" # test
-pydantic = "~2.7.4"
+pydantic = "~2.11.1"
 httpx = {version = "0.27.2", extras = ["brotli", "http2", "socks"]}
 python-multipart = "0.0.9"
 json_repair = ">=0.30.0"
@@ -100,7 +101,6 @@ extended_testing = [
     "psychicapi",
     "gql",
     "gradientai",
-    "requests-toolbelt",
     "html2text",
     "py-trello",
     "scikit-learn",
