--- a/frontend/.npmrc
+++ b/frontend/.npmrc
@@ -1,5 +1,7 @@
 lockfile=false
 resolution-mode=highest
+#registry=https://registry.npmmirror.com
+#@azure:registry=https://registry.npmjs.org
 
 enable-pre-post-scripts=true
 
