--- a/frontend/package.json
+++ b/frontend/package.json
@@ -85,7 +85,7 @@
     "@lobehub/chat-plugins-gateway": "latest",
     "@lobehub/icons": "^1.13.0",
     "@lobehub/tts": "latest",
-    "@lobehub/ui": "^1.129.2",
+    "@lobehub/ui": "1.129.2",
     "@vercel/analytics": "^1",
     "ahooks": "^3",
     "ai": "^3.0.0",
