--- a/frontend/package.json
+++ b/frontend/package.json
@@ -79,11 +79,12 @@
     "@aws-sdk/client-bedrock-runtime": "^3.503.1",
     "@azure/openai": "^1.0.0-beta.11",
     "@cfworker/json-schema": "^1",
+    "@emotion/is-prop-valid": "^1.3.1",
     "@google/generative-ai": "^0.2.0",
     "@icons-pack/react-simple-icons": "^9",
     "@lobehub/chat-plugin-sdk": "latest",
     "@lobehub/chat-plugins-gateway": "latest",
-    "@lobehub/icons": "^1.13.0",
+    "@lobehub/icons": "1.13.0",
     "@lobehub/tts": "latest",
     "@lobehub/ui": "1.129.2",
     "@vercel/analytics": "^1",
