--- a/libs/chatchat-server/pyproject.toml
+++ b/libs/chatchat-server/pyproject.toml
@@ -20,6 +20,7 @@ langchain-community = "0.0.36"
 langchain-openai = { version = "0.0.6", python = ">=3.8.1,<3.12,!=3.9.7" }
 langchain-experimental = "0.0.58"
 humanlayer= "0.7.6"
+nest_asyncio = "1.6.0"
 mcp = ">=1.4.1,<1.5"
 fastapi = "~0.109.2"
 sse_starlette = "~1.8.2"
